More collapse fixes

--- a/module/CommonBundle/src/Resources/assets/site/less/layout.less
+++ b/module/CommonBundle/src/Resources/assets/site/less/layout.less
@@ -91,8 +91,10 @@ header {
         }
     }
 
-    ul.main-nav {
-        padding-right: 20px;
+    .main-nav {
+        ul {
+            padding-right: 20px;
+        }
     }
 
     .btn-navbar {
